upgrade doctocat and add figma links to docs

--- a/apps/docs/content/components/FormControl.mdx
+++ b/apps/docs/content/components/FormControl.mdx
@@ -1,6 +1,7 @@
 ---
 title: FormControl
-status: Technical Preview
+status: Experimental
+figma: 'https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=1793%3A27781'
 source: https://github.com/primer/brand/tree/main/src/FormControl/FormControl.tsx
 storybook: '/brand/storybook/?path=/story/components-forms-formcontrol--playground'
 description: Display form inputs alongside labels, validation and more.
@@ -11,14 +12,6 @@ import {PropTableValues} from '../../src/components'
 import {Label} from '@primer/react'
 import {Heading} from '@primer/react-brand'
 import {Link} from 'gatsby'
-
-<Note>
-
-This is a Technical Preview for `FormControl`.
-
-`FormControl` will be generally available in the next `minor` release.
-
-</Note>
 
 ```js
 import {FormControl} from '@primer/react-brand'
