--- a/apps/docs/content/components/Checkbox.mdx
+++ b/apps/docs/content/components/Checkbox.mdx
@@ -1,7 +1,8 @@
 ---
 title: Checkbox
-status: Technical Preview
+status: Experimental
 source: https://github.com/primer/brand/tree/main/src/Checkbox/Checkbox.tsx
+figma: 'https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=1377%3A30754'
 storybook: '/brand/storybook/?path=/story/components-forms-textinput--playground'
 description: Use Checkbox to select one or more options of a limited number of choices.
 ---
@@ -10,14 +11,6 @@ import InlineCode from '@primer/gatsby-theme-doctocat/src/components/inline-code
 import {PropTableValues} from '../../src/components'
 import {Label} from '@primer/react'
 import {Link} from 'gatsby'
-
-<Note>
-
-This is a Technical Preview for `Checkbox`.
-
-`Checkbox` will be generally available in the next `minor` release.
-
-</Note>
 
 ## Examples
 
