--- a/apps/docs/content/components/Select.mdx
+++ b/apps/docs/content/components/Select.mdx
@@ -1,6 +1,7 @@
 ---
 title: Select
-status: Technical Preview
+status: Experimental
+figma: 'https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=1793%3A28117'
 source: https://github.com/primer/brand/tree/main/src/Select/Select.tsx
 storybook: '/brand/storybook/?path=/story/components-forms-formcontrol--playground'
 description: Enable selection of one option from a list.
@@ -10,14 +11,6 @@ import InlineCode from '@primer/gatsby-theme-doctocat/src/components/inline-code
 import {PropTableValues} from '../../src/components'
 import {Label} from '@primer/react'
 import {Link} from 'gatsby'
-
-<Note>
-
-This is a Technical Preview for `Select`.
-
-`Select` will be generally available in the next `minor` release.
-
-</Note>
 
 ```js
 import {Select} from '@primer/react-brand'
