--- a/apps/docs/content/components/TextInput.mdx
+++ b/apps/docs/content/components/TextInput.mdx
@@ -1,6 +1,7 @@
 ---
 title: TextInput
-status: Technical Preview
+status: Experimental
+figma: 'https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=1377%3A30676'
 source: https://github.com/primer/brand/tree/main/src/TextInput/TextInput.tsx
 storybook: '/brand/storybook/?path=/story/components-forms-textinput--playground'
 description: A single-line text field.
@@ -10,14 +11,6 @@ import InlineCode from '@primer/gatsby-theme-doctocat/src/components/inline-code
 import {PropTableValues} from '../../src/components'
 import {Label} from '@primer/react'
 import {Link} from 'gatsby'
-
-<Note>
-
-This is a Technical Preview for `TextInput`.
-
-`TextInput` will be generally available in the next `minor` release.
-
-</Note>
 
 ```js
 import {TextInput} from '@primer/react-brand'
