--- a/apps/docs/content/primitives/color.mdx
+++ b/apps/docs/content/primitives/color.mdx
@@ -1,6 +1,7 @@
 ---
 title: Color
 status: Experimental
+figma: 'https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=387%3A8439'
 ---
 
 import {HeadingTags, defaultHeadingTag} from '@primer/react-brand'
