--- a/apps/docs/content/components/Heading.mdx
+++ b/apps/docs/content/components/Heading.mdx
@@ -24,14 +24,16 @@ import {Heading} from '@primer/react-brand'
 
 ### Scale
 
+Heading sizes range from 1-6 and map to positions 900-400 on the Brand type scale respectively.
+
 ```jsx live
 <>
-  <Heading as="h1">Heading 1</Heading>
-  <Heading as="h2">Heading 2</Heading>
-  <Heading as="h3">Heading 3</Heading>
-  <Heading as="h4">Heading 4</Heading>
-  <Heading as="h5">Heading 5</Heading>
-  <Heading as="h6">Heading 6</Heading>
+  <Heading as="h1">1: 72px</Heading>
+  <Heading as="h2">2: 64px</Heading>
+  <Heading as="h3">3: 48px</Heading>
+  <Heading as="h4">4: 32px</Heading>
+  <Heading as="h5">5: 24px</Heading>
+  <Heading as="h6">6: 20px</Heading>
 </>
 ```
 
