Add Figma links to docs and remove technical preview banners (#98)

--- a/apps/docs/content/components/SubdomainNavBar.mdx
+++ b/apps/docs/content/components/SubdomainNavBar.mdx
@@ -1,6 +1,7 @@
 ---
 title: SubdomainNavBar
 status: Experimental
+figma: 'https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=1024%3A32796'
 source: https://github.com/primer/brand/tree/main/src/SubdomainNavBar/SubdomainNavBar.tsx
 storybook: '/brand/storybook/?path=/story/components-subdomainnavbar--default'
 description: Top level navigation for subdomain sites.
@@ -22,7 +23,7 @@ import {SubdomainNavBar} from '@primer/react-brand'
 
 `SubdomainNavBar` is designed to fix to the top of the viewport.
 
-Please refer to our [Storybook examples](/brand/storybook/?path=/story/components-subdomainnavbar--playground) to see the component in a full-screen browser as originally intended.
+Please refer to our [Storybook examples](https://primer.style/brand/storybook/?path=/story/components-subdomainnavbar--playground) to see the component in a full-screen browser as originally intended.
 
 </Note>
 
