remove fragments from code examples

--- a/apps/docs/content/components/ComparisonTable.mdx
+++ b/apps/docs/content/components/ComparisonTable.mdx
@@ -30,40 +30,34 @@ import {ComparisonTable} from '@primer/react-brand'
   <ComparisonTable.Row>
     <ComparisonTable.Cell>Automation & CI/CD</ComparisonTable.Cell>
     <ComparisonTable.Cell>
-      <>
-        <Text as="p" size="300">
-          Comparable native core capabilities
-        </Text>
-        <Text as="p" size="300">
-          <a href="#">Over 13,000 GitHub Actions are available</a> in the GitHub
-          Marketplace to automate your development workflow.
-        </Text>
-      </>
+      <Text as="p" size="300">
+        Comparable native core capabilities
+      </Text>
+      <Text as="p" size="300">
+        <a href="#">Over 13,000 GitHub Actions are available</a> in the GitHub
+        Marketplace to automate your development workflow.
+      </Text>
     </ComparisonTable.Cell>
     <ComparisonTable.Cell>
-      <>
-        <Text as="p" size="300">
-          Comparable native capabilities
-        </Text>
-        <Text as="p" size="300">
-          1,800+ community contributed Jenkins plugins{' '}
-          <a href="#">in Jenkins Plugin Marketplace.</a>
-        </Text>
-      </>
+      <Text as="p" size="300">
+        Comparable native capabilities
+      </Text>
+      <Text as="p" size="300">
+        1,800+ community contributed Jenkins plugins{' '}
+        <a href="#">in Jenkins Plugin Marketplace.</a>
+      </Text>
     </ComparisonTable.Cell>
   </ComparisonTable.Row>
   <ComparisonTable.Row>
     <ComparisonTable.Cell>Deployment models</ComparisonTable.Cell>
     <ComparisonTable.Cell>Cloud or self-hosted</ComparisonTable.Cell>
     <ComparisonTable.Cell>
-      <>
-        <Text as="p" size="300">
-          Self-hosted only
-        </Text>
-        <Text as="p" size="300">
-          CloudBees is the cloud alternative
-        </Text>
-      </>
+      <Text as="p" size="300">
+        Self-hosted only
+      </Text>
+      <Text as="p" size="300">
+        CloudBees is the cloud alternative
+      </Text>
     </ComparisonTable.Cell>
   </ComparisonTable.Row>
   <ComparisonTable.Footnote>
@@ -89,40 +83,34 @@ For granular control over heading markup or appearance, we recommend using [`Hea
   <ComparisonTable.Row>
     <ComparisonTable.Cell>Automation & CI/CD</ComparisonTable.Cell>
     <ComparisonTable.Cell>
-      <>
-        <Text as="p" size="300">
-          Comparable native core capabilities
-        </Text>
-        <Text as="p" size="300">
-          <a href="#">Over 13,000 GitHub Actions are available</a> in the GitHub
-          Marketplace to automate your development workflow.
-        </Text>
-      </>
+      <Text as="p" size="300">
+        Comparable native core capabilities
+      </Text>
+      <Text as="p" size="300">
+        <a href="#">Over 13,000 GitHub Actions are available</a> in the GitHub
+        Marketplace to automate your development workflow.
+      </Text>
     </ComparisonTable.Cell>
     <ComparisonTable.Cell>
-      <>
-        <Text as="p" size="300">
-          Comparable native capabilities
-        </Text>
-        <Text as="p" size="300">
-          1,800+ community contributed Jenkins plugins{' '}
-          <a href="#">in Jenkins Plugin Marketplace.</a>
-        </Text>
-      </>
+      <Text as="p" size="300">
+        Comparable native capabilities
+      </Text>
+      <Text as="p" size="300">
+        1,800+ community contributed Jenkins plugins{' '}
+        <a href="#">in Jenkins Plugin Marketplace.</a>
+      </Text>
     </ComparisonTable.Cell>
   </ComparisonTable.Row>
   <ComparisonTable.Row>
     <ComparisonTable.Cell>Deployment models</ComparisonTable.Cell>
     <ComparisonTable.Cell>Cloud or self-hosted</ComparisonTable.Cell>
     <ComparisonTable.Cell>
-      <>
-        <Text as="p" size="300">
-          Self-hosted only
-        </Text>
-        <Text as="p" size="300">
-          CloudBees is the cloud alternative
-        </Text>
-      </>
+      <Text as="p" size="300">
+        Self-hosted only
+      </Text>
+      <Text as="p" size="300">
+        CloudBees is the cloud alternative
+      </Text>
     </ComparisonTable.Cell>
   </ComparisonTable.Row>
   <ComparisonTable.Footnote>
@@ -191,40 +179,34 @@ const App = () => {
         <ComparisonTable.Row>
           <ComparisonTable.Cell>Automation & CI/CD</ComparisonTable.Cell>
           <ComparisonTable.Cell>
-            <>
-              <Text as="p" size="300">
-                Comparable native core capabilities
-              </Text>
-              <Text as="p" size="300">
-                Over 13,000 GitHub Actions are available in the GitHub
-                Marketplace to automate your development workflow.
-              </Text>
-            </>
+            <Text as="p" size="300">
+              Comparable native core capabilities
+            </Text>
+            <Text as="p" size="300">
+              Over 13,000 GitHub Actions are available in the GitHub Marketplace
+              to automate your development workflow.
+            </Text>
           </ComparisonTable.Cell>
           <ComparisonTable.Cell>
-            <>
-              <Text as="p" size="300">
-                Comparable native capabilities
-              </Text>
-              <Text as="p" size="300">
-                1,800+ community contributed Jenkins plugins in Jenkins Plugin
-                Marketplace.
-              </Text>
-            </>
+            <Text as="p" size="300">
+              Comparable native capabilities
+            </Text>
+            <Text as="p" size="300">
+              1,800+ community contributed Jenkins plugins in Jenkins Plugin
+              Marketplace.
+            </Text>
           </ComparisonTable.Cell>
         </ComparisonTable.Row>
         <ComparisonTable.Row>
           <ComparisonTable.Cell>Deployment models</ComparisonTable.Cell>
           <ComparisonTable.Cell>Cloud or self-hosted</ComparisonTable.Cell>
           <ComparisonTable.Cell>
-            <>
-              <Text as="p" size="300">
-                Self-hosted only
-              </Text>
-              <Text as="p" size="300">
-                CloudBees is the cloud alternative
-              </Text>
-            </>
+            <Text as="p" size="300">
+              Self-hosted only
+            </Text>
+            <Text as="p" size="300">
+              CloudBees is the cloud alternative
+            </Text>
           </ComparisonTable.Cell>
         </ComparisonTable.Row>
         <ComparisonTable.Footnote>
