update colors for radio after design review

--- a/apps/docs/content/components/Textarea.mdx
+++ b/apps/docs/content/components/Textarea.mdx
@@ -91,12 +91,14 @@ render(<TextareaExample />)
   <FormControl validationStatus="success">
     <FormControl.Label>Success state</FormControl.Label>
     <Textarea />
+    <FormControl.Validation>This is a success message</FormControl.Validation>
   </FormControl>
 </Stack>
 <Stack direction="vertical">
   <FormControl validationStatus="error">
     <FormControl.Label>Error state</FormControl.Label>
     <Textarea />
+    <FormControl.Validation>This is an error message</FormControl.Validation>
   </FormControl>
 </Stack>
 ```
