--- a/apps/docs/content/components/CTABanner.mdx
+++ b/apps/docs/content/components/CTABanner.mdx
@@ -32,7 +32,7 @@ import {CTABanner, ButtonGroup, Button} from '@primer/react-brand'
 </CTABanner>
 ```
 
-### Aligned center
+### Alignment
 
 The content alignment can be changed using the `align` prop on the root `<ComparisonTable>`. This can be configured to either `start` or `center`.
 
