--- a/apps/docs/content/components/CTABanner.mdx
+++ b/apps/docs/content/components/CTABanner.mdx
@@ -34,7 +34,7 @@ import {CTABanner, ButtonGroup, Button} from '@primer/react-brand'
 
 ### Alignment
 
-The content alignment can be changed using the `align` prop on the root `<ComparisonTable>`. This can be configured to either `start` or `center`.
+The content alignment can be changed using the `align` prop on the root `CTABanner`. This can be configured to either `start` or `center`.
 
 ```jsx live
 <CTABanner align={'center'}>
