--- a/apps/docs/content/components/CTABanner.mdx
+++ b/apps/docs/content/components/CTABanner.mdx
@@ -37,7 +37,7 @@ import {CTABanner, ButtonGroup, Button} from '@primer/react-brand'
 The content alignment can be changed using the `align` prop on the root `CTABanner`. This can be configured to either `start` or `center`.
 
 ```jsx live
-<CTABanner align={'center'}>
+<CTABanner align="center">
   <CTABanner.Heading>
     Where the most ambitious teams build great things
   </CTABanner.Heading>
