--- a/apps/docs/content/components/CTABanner.mdx
+++ b/apps/docs/content/components/CTABanner.mdx
@@ -55,7 +55,7 @@ The content alignment can be changed using the `align` prop on the root `CTABann
 
 ### Optional border
 
-A border can be provided using the `hasBorder` prop on the root `<ComparisonTable>`. This will render a border around the CTABanner component giving separatoin between the foreground and background. Especially when there is no shadow present on the background.
+A border can be provided using the `hasBorder` prop on the root `<CTABanner>`. This will render a border around the CTABanner component giving further separation between the foreground and background. Especially when there is no shadow present on the background.
 
 ```jsx live
 <CTABanner hasBorder>
