--- a/apps/docs/content/components/CTABanner.mdx
+++ b/apps/docs/content/components/CTABanner.mdx
@@ -97,7 +97,7 @@ A background can be removed using the `hasBackground` prop on the root `<Compari
 
 ### Optional shadow
 
-The shadow can be removed using the `hasShadow` prop on the root `<ComparisonTable>`. This will render the CTABanner component without the background shaow.
+The shadow can be removed using the `hasShadow` prop on the root `CTABanner`. This will render the component without the background shadow.
 
 ```jsx live
 <CTABanner hasShadow={false}>
