--- a/apps/docs/content/components/CTABanner.mdx
+++ b/apps/docs/content/components/CTABanner.mdx
@@ -171,7 +171,7 @@ The first row in a table is automatically styled as a table header row.
 
 | name            | type                       | default   | required | description                                                  |
 | --------------- | -------------------------- | --------- | -------- | ------------------------------------------------------------ |
-| `children`      | `ReactNode`, `ReactNode[]` | undefined | `true`   | Content to include within the banner component               |
+| `children`      | `ReactNode`, `ReactNode[]` | `undefined` | `true`   | Content to include within the banner component               |
 | `align`         | `start`, `center`          | `start`   | `true`   | The layout applied to the content wihin the banner component |
 | `hasBorder`     | `boolean`                  | `false`   | `false`  | A flag used to provide a border to the banner component      |
 | `hasBackground` | `boolean`                  | `true`    | `false`  | A flag used to add a background to the banner component      |
