--- a/apps/docs/content/components/AnchorNav.mdx
+++ b/apps/docs/content/components/AnchorNav.mdx
@@ -1,7 +1,7 @@
 ---
 title: AnchorNav
 status: Experimental
-figma: 'https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=1024%3A32796'
+figma: 'https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=3359%3A30494&t=7vT79cAF1kbiMd2j-4'
 source: https://github.com/primer/brand/tree/main/src/AnchorNav/AnchorNav.tsx
 storybook: '/brand/storybook/?path=/story/components-anchornav--playground'
 description: Use AnchorNav for prompt navigation to different sections of a page.
@@ -91,12 +91,13 @@ Please refer to our [Storybook examples](https://primer.style/brand/storybook/?p
 
 ### AnchorNav <Label>Required</Label>
 
-| Name        | Type                                                                                            | Default | Description                              |
-| :---------- | :---------------------------------------------------------------------------------------------- | :-----: | :--------------------------------------- |
-| `children`  | <PropTableValues values={['AnchorNav.Link','AnchorNav.Action', 'ReactNode' ]} addLineBreaks />, |         | Valid child nodes                        |
-| `className` | `string`                                                                                        |         | Sets a custom class                      |
-| `id`        | `string`                                                                                        |         | Sets a custom id                         |
-| `ref`       | `React.RefObject`                                                                               |         | Forward a Ref to the underlying DOM node |
+| Name                   | Type                                                                                            | Default | Description                                                             |
+| :--------------------- | :---------------------------------------------------------------------------------------------- | :-----: | :---------------------------------------------------------------------- |
+| `children`             | <PropTableValues values={['AnchorNav.Link','AnchorNav.Action', 'ReactNode' ]} addLineBreaks />, |         | Valid child nodes                                                       |
+| `className`            | `string`                                                                                        |         | Sets a custom class                                                     |
+| `enableDefaultBgColor` | `boolean`                                                                                       | `false` | Enable the idle state background color, which is transparent by default |
+| `id`                   | `string`                                                                                        |         | Sets a custom id                                                        |
+| `ref`                  | `React.RefObject`                                                                               |         | Forward a Ref to the underlying DOM node                                |
 
 <h3 id="AnchorNav-link">
   AnchorNav.Link <Label>Required</Label>
