--- a/apps/docs/content/components/CTABanner.mdx
+++ b/apps/docs/content/components/CTABanner.mdx
@@ -177,7 +177,7 @@ The first row in a table is automatically styled as a table header row.
 | `hasBackground` | `boolean`                  | `true`      | `false`  | A flag used to add a background to the banner component      |
 | `className`     | `string`                   |             | `false`  | CTABanner custom class                                       |
 
-### ComparisonTable.Heading
+### CTABanner.Heading
 
 Optional node that can be used to provide a heading for the banner.
 
