--- a/apps/docs/content/components/CTABanner.mdx
+++ b/apps/docs/content/components/CTABanner.mdx
@@ -116,7 +116,7 @@ The shadow can be removed using the `hasShadow` prop on the root `CTABanner`. Th
 </CTABanner>
 ```
 
-#### Color customization
+### Shadow color customization
 
 The default colors can be customized through dedicated CSS variables.
 
