Updated CTABanner based on Comments - Added changeset - Updated docs - Added notes to props

--- a/apps/docs/content/components/CTABanner.mdx
+++ b/apps/docs/content/components/CTABanner.mdx
@@ -165,7 +165,7 @@ render(<App />)
 
 ## Component props
 
-### ComparisonTable <Label>Required</Label>
+### CTABanner <Label>Required</Label>
 
 The first row in a table is automatically styled as a table header row.
 
