--- a/apps/docs/content/components/CTABanner.mdx
+++ b/apps/docs/content/components/CTABanner.mdx
@@ -8,7 +8,8 @@ description: Use CTABanner to draw attention to or create urgency around a user 
 ---
 
 ```js
-import {CTABanner, Button, Label} from '@primer/react-brand'
+import {CTABanner, Button} from '@primer/react-brand'
+import {Label} from '@primer/react'
 ```
 
 ## Examples
