Add missing footnotes to dynamic example

--- a/apps/docs/content/components/ComparisonTable.mdx
+++ b/apps/docs/content/components/ComparisonTable.mdx
@@ -283,7 +283,9 @@ const App = () => {
           </ComparisonTable.Row>
         )
       })}
-      <ComparisonTable.Footnote></ComparisonTable.Footnote>
+      <ComparisonTable.Footnote>
+        {comparisonTableData.footnotes}
+      </ComparisonTable.Footnote>
     </ComparisonTable>
   )
 }
