Adjust minimal description

--- a/apps/docs/content/components/ComparisonTable.mdx
+++ b/apps/docs/content/components/ComparisonTable.mdx
@@ -295,7 +295,7 @@ render(<App />)
 
 ### Minimal layout
 
-`ComparisonTable` has an alternative visual presentation mode called 'minimal'. This will display the data in a condensed matrix format, and without visual cues like featured columns.
+`ComparisonTable` has an alternative visual presentation mode called `minimal`. This will display the data without the featured columns.
 
 This variant is suitable for embedding into long-form content, or in situations where usage of on-screen color needs to be minimized.
 
