--- a/apps/docs/content/components/ComparisonTable.mdx
+++ b/apps/docs/content/components/ComparisonTable.mdx
@@ -356,12 +356,12 @@ This variant is suitable for embedding into long-form content, or in situations 
 
 ### ComparisonTable <Label>Required</Label>
 
-| name             | type                                                                                    | default   | required    | description                                                                                                                                               |
-| ---------------- | --------------------------------------------------------------------------------------- | --------- | ----------- | --------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| `children`       | `ComparisonTable.Row`, `ComparisonTable.Cell`, `ComparisonTable.Footnotes`, `ReactNode` | undefined | `true`      | Valid children. Accepts `ReactNode` for conditional rendering.                                                                                            |
-| `heading`        | `string`                                                                                | undefined | `false`     | Optional heading that appears above table, preconfigured as a `h3`.                                                                                       |
-| `featuredColumn` | `number`                                                                                | undefined | `1`         | Indicates that the data column at the specified index is visually important and unique in relation to its adjacent cells, and will be styled accordingly. |
-| `variant`        | `"default"`, `"minimal"`                                                                | undefined | `"default"` | Applies alternative presentation.                                                                                                                         |
+| name             | type                                                                                    | default     | required | description                                                                                                                                               |
+| ---------------- | --------------------------------------------------------------------------------------- | ----------- | -------- | --------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| `children`       | `ComparisonTable.Row`, `ComparisonTable.Cell`, `ComparisonTable.Footnotes`, `ReactNode` | undefined   | `true`   | Valid children. Accepts `ReactNode` for conditional rendering.                                                                                            |
+| `heading`        | `string`                                                                                | undefined   | `false`  | Optional heading that appears above table, preconfigured as a `h3`.                                                                                       |
+| `featuredColumn` | `number`                                                                                | `1`         | `false`  | Indicates that the data column at the specified index is visually important and unique in relation to its adjacent cells, and will be styled accordingly. |
+| `variant`        | `"default"`, `"minimal"`                                                                | `"default"` | `false`  | Applies alternative presentation.                                                                                                                         |
 
 ### ComparisonTable.Row <Label>Required</Label>
 
